Updated timer buttons container to prevent wrapping on smaller screen sizes.

--- a/src/timer/Timer.scss
+++ b/src/timer/Timer.scss
@@ -52,4 +52,9 @@
         margin: 10px 0;
         color: $dark1; 
     }
+
+    .controls {
+        display: flex;
+        wrap: nowrap;
+    }
 }
